[package]
name = "bashreadline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.39.1", features = ["elf"] }
libbpf-rs = "0.26.2"
plain = "0.2.3"
chrono = "0.4.44"
tokio = { version = "1.52.3", features = ["full"] }
rlimit = "0.9.1"
libbpf-async = { path = "../../libbpf-async" }

[build-dependencies]
libbpf-cargo = "0.26.2"
