[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.26.1"
chrono = "0.4"
clap = { version = "4.2.7", features = ["derive"] }
libbpf-rs = "0.26.2"
nix = { version = "0.31.3", features = ["ioctl"] }
num_cpus = "1.17"
perf-event-open-sys = "6.0.0"
plain = "0.2.3"
rlimit = "0.11"
tokio = { version = "1.52.3", features = ["full"] }
libbpf-async = { path = "../../libbpf-async" }

[build-dependencies]
libbpf-cargo = "0.26.2"
